Fixed Navbar Collapse Menu Container, fixed .staffName (changed p to h3)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -56,7 +56,7 @@ h1 {
   font-size: 7vmin;
   text-align: center;
   color: #642516 !important;
- /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);*/
+  /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);*/
   margin-top: 25px;
   margin-bottom: 15px;
   font-weight: bold;
@@ -68,7 +68,7 @@ h1 {
   top: 10%;
   float: left;
   width: 8vw;
-  height: 8vh; 
+  height: 8vh;
   background-color: #DEF7FF;
 }
 
@@ -83,7 +83,7 @@ h1 {
 
 @media (max-width: 1199px) {
   .wideLogo {
-  display: none;
+    display: none;
   }
 }
 
@@ -127,8 +127,8 @@ h1 {
 
 @media (min-width: 1199px) {
   .navheight {
-      height: auto !important;
-}
+    height: auto !important;
+  }
 
   .navbar li {
     margin-left: 1em;
@@ -199,7 +199,7 @@ a.active.nav-link {
   }
 }
 
-@media (max-width: 76px) {
+@media (max-width: 766px) {
   .navbar {
     max-width: 100vw;
     display: flex;
@@ -212,11 +212,17 @@ a.active.nav-link {
 
 .navbar-collapse {
   background-color: #1F2022;
-
+}
+@media (max-width: 1199px) {
+  .navbar-collapse {
+    margin-right: 75vw;
+    padding-left: 3vw;
+  }
 }
 @media (max-width: 1199px) {
   .mobileDrop {
     margin-top: 7vh;
+    width: auto;
   }
 }
 
@@ -545,8 +551,9 @@ a.active.navMember {
   font-weight: bold;
   text-align: center;
 }
+
 .aboutImg {
-  width: 60vw; 
+  width: 60vw;
   height: 75vh;
 }
 
@@ -564,39 +571,45 @@ a.active.navMember {
 }
 
 .aboutContact {
-   text-align: justify;
+  text-align: justify;
   font-size: 4vmin;
   background-color: #e85c1f;
   width: 40vw;
 }
+
 .aboutContact>p {
   margin-top: 35%;
   color: white;
 
 }
+
 @media (max-width: 1175px) {
   .aboutContact {
-  width: 41vw;
-  height: auto;  
+    width: 41vw;
+    height: auto;
   }
+
   .aboutContact>p {
     margin: auto;
     font-size: 4vmin;
   }
 }
+
 @media (max-width: 1025px) {
   .aboutContact>p {
     font-size: 3vmin;
   }
 }
+
 @media (max-width: 768px) {
   .aboutContact {
-     display: inline-block;
+    display: inline-block;
     left: 0;
     width: 100vw;
   }
-    .aboutContact>p {
-      font-size: 4vmin;
+
+  .aboutContact>p {
+    font-size: 4vmin;
   }
 }
 
@@ -620,44 +633,50 @@ a.active.navMember {
 /*Staff*/
 
 .staffBio {
-  line-height: 3.5vmin;
   background: #1F2022;
   width: auto;
   height: 20vh;
-  font-size: 1.5vmin;
   padding: 10px;
 }
+
+.staffBio>p {
+  color: white;
+  font-size: 2vmin;
+}
+
 @media (max-width: 1556px) {
   .staffBio {
     height: auto;
     margin-top: auto;
-    }
   }
-  @media (max-width: 750px) {
-    .staffBio {
-      font-size: 2vmin;
-    }
-  }
-  @media (max-width: 524px) {
-    .staffBio {
-      font-size: 4vmin;
-      line-height: normal;
-    }
-  }
-
-.staffBio>p {
-  color:white;
 }
 
+@media (max-width: 750px) {
+  .staffBio>p {
+    font-size: 3vmin;
+  }
+}
+
+@media (max-width: 524px) {
+  .staffBio>p {
+    font-size: 2.5vmin;
+
+  }
+}
 
 .staffName {
   font-family: 'Alegreya Sans', sans-serif;
-  font-size: 4vmin;
+  font-size: 3vmin;
   margin-top: auto;
   padding-top: 1.5vmin;
   color: #04D7F8 !important;
 }
 
+@media (max-width: 677px) {
+  .staffName {
+    font-size: 5vmin;
+  }
+}
 
 /*/Staff*/
 
